# dockerprom

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  dockerprom.service
.github/workflows/: docker-publish.yml  release.yml  rust.yml
src/: cli.rs  containers.rs  main.rs  metrics.rs
