[package]
name = "dockerprom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
hyper = { version = "1", features = ["http1"] }
tokio = { version = "1", features = ["macros", "rt"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prometheus_exporter_base = { version = "1.4.0" }
lazy_static = "1.4.0"
http = "1.1.0"
num = "0.4.3"
append-only-vec = "0.1.3"
pretty_env_logger = "0.5"
log = "0.4"
clap = { version = "4.5.7", features = ["derive", "env"] }
base64 = "0.22.1"
signal-hook = "0.3.17"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
